Added customer desktop, redesigned models, began working on shopping cart for purchases of vendorwise products

--- a/buildngz_main/static/styles/help.css
+++ b/buildngz_main/static/styles/help.css
@@ -34,7 +34,7 @@ a.box_topic:hover {
 a.box_topic i {
   font-size: 60px;
   font-size: 3.75rem;
-  color: #FF3A65;
+  color: #4ac857;
   display: block;
   margin: 0 auto 15px;
 }
