--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
     <link href="{% static 'styles/account.css' %}" rel="stylesheet">
     <link href="{% static 'styles/listing.css' %}" rel="stylesheet">
     <link href="{% static 'styles/detail-page.css' %}" rel="stylesheet">
+    <link href="{% static 'styles/help.css' %}" rel="stylesheet">
+    <link href="{% static 'vendor/styles/app.css' %}" rel="stylesheet">
     
     <!-- YOUR CUSTOM CSS -->
     <link href="{% static 'styles/custom.css' %}" rel="stylesheet">
