--- a/templates/includes/a_sidebar.html
+++ b/templates/includes/a_sidebar.html
@@ -7,7 +7,7 @@
         <div id="sidebar-menu">
             <!-- Left Menu Start -->
             <ul class="metismenu list-unstyled" id="side-menu">
-                <li class="menu-title">Main {{user.get_role}} Account</li>
+                <li class="menu-title">Main Admin Account</li>
 
                 <li>
                     <a href="{% url 'vendorDashboard' %}" class="waves-effect">
