--- a/templates/accounts/adminDashboard.html
+++ b/templates/accounts/adminDashboard.html
@@ -1,4 +1,4 @@
-{% extends 'v_base.html' %}
+{% extends 'a_base.html' %}
 {% load static %}
 {% block content%}
 
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-12">
             <div class="page-title-box d-flex align-items-center justify-content-between">
-                <h3 class="mb-0 font-size-24">{{vendor.vendor_name}} Pro Dashboard</h3>
+                <h3 class="mb-0 font-size-24">Admin Dashboard</h3>
 
                 <!-- <div class="page-title-right">
                     <ol class="breadcrumb m-0">
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col-sm-8 col-8 align-self-center text-center">
                             <div class="ml-2 text-right">
-                                <p class="mb-1 text-muted font-size-13">Visitors</p>
+                                <p class="mb-1 text-muted font-size-13">Subscribers</p>
                                 <h4 class="mt-0 mb-1 font-20">25,090</h4>                                                                                                                                           
                             </div>
                         </div>                    
@@ -114,170 +114,7 @@
         </div>
     </div><!--end row-->
 
-    <!-- <div class="row">
-        <div class="col-xl-8">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">Project Budget</h5>
-                    <div class="row justify-content-end">                                        
-                        <div class="col-xl-12 align-self-center">
-                            <ul class="list-unstyled list-inline float-right">
-                                <li class="list-inline-item px-3">
-                                    <h5 class="mt-0">$ 42,000 </h5>
-                                    <small class="font-size-14 text-muted">Total Budget</small>
-                                </li>
-                                <li class="list-inline-item px-3">
-                                    <h5 class="mb-2">$ 7,200 </h5>
-                                    <small class="font-size-14 text-muted">Remaining</small>
-                                </li>
-                                <li class="list-inline-item px-3">
-                                    <h5 class="text-danger mb-2"><i class="mdi mdi-arrow-down-bold font-size-14 text-danger"></i> 7.9% </h5>                                                                                
-                                    <span class="font-size-14 text-danger">Over Target Currently</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="extra-area-chart" class="morris-charts project-budget-chart" style="height: 322px;" dir="ltr" ></div>                                    
-                    <ul class="list-unstyled text-center text-muted mb-0 mt-2">
-                        <li class="list-inline-item font-size-13"><i class="mdi mdi-album font-size-16 text-primary mr-2"></i>Total Budget</li>
-                        <li class="list-inline-item font-size-13"><i class="mdi mdi-album font-size-16 text-success mr-2"></i>Amount Used</li>
-                        <li class="list-inline-item font-size-13"><i class="mdi mdi-album font-size-16 text-secondary mr-2"></i>Target Amount</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="mt-0">Overall Process</h5>
-                    <div class="row">
-                        <div class="col-sm-6 align-self-center">
-                            <div class="live-tile text-center" data-mode="carousel" data-direction="vertical" data-delay="3500" data-height="10">
-                                <div class="mt-2">      
-                                    <h5 class="text-primary pt-2">P1-Launch Date</h5>  
-                                    <small class="text-muted">Tuesday, 25 December 2018</small>                                                    
-                                    <h3 class="text-dark mt-1">170 Days</h3>                                                                            
-                                </div>
-                                <div class="mt-2">                                                            
-                                    <h5 class="text-primary pt-2">P2-Launch Date</h5>  
-                                    <small class="text-muted">Tuesday, 25 December 2018</small>                                                    
-                                    <h3 class="text-dark mt-1">180 Days</h3> 
-                                </div>
-                                <div class="mt-2">                                                            
-                                    <h5 class="text-primary pt-2">P3-Launch Date</h5>  
-                                    <small class="text-muted">Tuesday, 25 December 2018</small>                                                    
-                                    <h4 class="text-dark mt-1">190 Days</h4> 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="text-center knob-Prosess mt-4 mt-sm-0" dir="ltr">
-                                <input class="knob animated" value="0" rel="90" data-width="120" data-height="120" data-linecap=round
-                                data-fgColor="#44a2d2"  data-skin="tron" data-angleOffset="180"
-                                data-readOnly=true data-thickness=".1"/>
-                                <div class="text-center knob-prosess-btn">
-                                    <a class="btn btn-sm  btn-primary text-white px-3 mt-2 mb-0">Refresh</a>
-                                </div>
-                            </div> 
-                        </div>
-                    </div>                                                                  
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-4 align-self-center">
-                                    <div class="icon-info">
-                                        <i class="mdi mdi-diamond text-warning"></i>
-                                    </div> 
-                                </div>
-                                <div class="col-8 align-self-center text-center">
-                                    <div class="ml-2 text-right">
-                                        <p class="mb-1 text-muted font-size-13">Projects</p>
-                                        <h4 class="mt-0 mb-1 font-20">35</h4>                                                                                                                                           
-                                    </div>
-                                </div>                    
-                            </div>
-                            <div class="progress mt-2" style="height:3px;">
-                                <div class="progress-bar progress-animated  bg-warning" role="progressbar" style="max-width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-4 align-self-center">
-                                    <div class="icon-info">
-                                        <i class="mdi mdi-account-multiple text-purple"></i>
-                                    </div> 
-                                </div>
-                                <div class="col-8 align-self-center text-center">
-                                    <div class="ml-2 text-right">
-                                        <p class="mb-1 text-muted font-size-13">Member</p>
-                                        <h4 class="mt-0 mb-1 font-20">12</h4>                                                                                                                                           
-                                    </div>
-                                </div>                    
-                            </div>
-                            <div class="progress mt-2" style="height:3px;">
-                                <div class="progress-bar progress-animated  bg-purple" role="progressbar" style="max-width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>                                        
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-4 align-self-center">
-                                    <div class="icon-info">
-                                        <i class="mdi mdi-playlist-check text-success"></i>
-                                    </div> 
-                                </div>
-                                <div class="col-8 align-self-center text-center">
-                                    <div class="ml-2 text-right">
-                                        <p class="mb-0 text-muted font-size-13">Tasks</p>
-                                        <span class="mt-0 font-20"><strong>40</strong></span>
-                                        <span class="badge badge-soft-success mt-1 shadow-none">Active</span>                                                                                                                                     
-                                    </div>
-                                </div>                    
-                            </div>
-                            <div class="progress mt-2" style="height:3px;">
-                                <div class="progress-bar progress-animated  bg-success" role="progressbar" style="max-width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-4 col-4 align-self-center">
-                                    <div class="icon-info">
-                                        <i class="mdi mdi-coin text-pink"></i>
-                                    </div> 
-                                </div>
-                                <div class="col-sm-8 col-8 align-self-center text-center">
-                                    <div class="ml-2 text-right">
-                                        <p class="mb-1 text-muted font-size-13">Budget</p>
-                                        <h4 class="mt-0 mb-1 font-20">$18090</h4>                                                                                                                                           
-                                    </div>
-                                </div>                    
-                            </div>
-                            <div class="progress mt-2" style="height:3px;">
-                                <div class="progress-bar progress-animated  bg-pink" role="progressbar" style="max-width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>                                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <div class="row">
-
         <div class="col-xl-9">
             <div class="card">                                
                 <div class="card-body">
